--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express": "~4.0.0",
     "node": "^8.3.0",
     "querystring": "~0.2.0",
-    "request": "~2.34.0"
+    "request": "~2.34.0",
+    "request-promise": "^4.2.2"
   }
 }
