--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "cookie-parser": "1.3.2",
     "express": "~4.0.0",
+    "lodash": "^4.17.4",
     "node": "^8.3.0",
     "querystring": "~0.2.0",
     "request": "~2.34.0",
